Fixed z-index problem of hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ section {
     flex-flow: column;
     transition: .2s linear !important;
     text-align: center;
+    z-index: 1;
 }
 
 .header .logo {
@@ -157,7 +158,7 @@ section {
     cursor: pointer;
     background-color: var(--black);
     color: var(--white);
-    /* z-index: 10; */
+    
 }
 
 .header.active {
